k8s/labs/security/private-image-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-image-pod
spec:
  containers:
  - name: app
    image: myuser/private-app:1.0.0
  imagePullSecrets:
  - name: regcred
  restartPolicy: Never
