k8s/labs/security/secret-env-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  containers:
  - name: app
    image: busybox:1.36
    command: ["sh", "-c", "echo DB_USER=$DB_USER DB_PASS=$DB_PASS && sleep 3600"]
  restartPolicy: Never
