k8s/labs/security/secret-envfrom-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-envfrom-pod
spec:
  containers:
  - name: app
    image: busybox:1.36
    command: ["sh", "-c", "echo username=$username password=$password && sleep 3600"]
  restartPolicy: Never
