k8s/labs/security/secret-opaque.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  containers:
  - name: myapp
    image: busybox:1.36
    command: ["sh", "-c", "echo Username: $DB_USER && echo Password: $DB_PASS && sleep 3600"]
  restartPolicy: Never
