k8s/labs/security/allow-from-test-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: prod
  name: allow-from-test-namespace
spec:
  podSelector:
    matchLabels:
      app: web-prod
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          environment: testing
