k8s/labs/security/allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k8slearning-allow-ingress
spec:
  podSelector:
    matchLabels:
      app: k8slearning
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: k8slearning
