k8s/labs/security/deny-all-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: dev
  name: deny-all-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
