k8s/labs/security/deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k8slearning-deny-all
spec:
  podSelector:
    matchLabels:
      app: k8slearning
  ingress: []
